--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chalk": "^4.1.0",
     "dayjs": "^1.8.29",
     "lodash": "^4.17.19",
+    "ora": "^5.0.0",
     "replace-ext": "^2.0.0"
   }
 }
