chore(package.json):添加keywords关键词

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "keywords": [
     "webpack",
     "plugin",
-    "miniprogram"
+    "miniprogram",
+    "wx"
   ],
   "author": "O_c",
   "license": "MIT",
